Recreated qt-android Dockerfile